#79 Download URL now is URI in fact